k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: traefik-ingress-controller
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo
      containers:
        - name: traefik
          image: traefik:v2.4
          args:
            # - --log.level=DEBUG
            - --api.insecure
            - --accesslog
            - --providers.kubernetescrd
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --certificatesresolvers.myresolver.acme.tlschallenge
            - --certificatesresolvers.myresolver.acme.email=example@email.com
            - --certificatesresolvers.myresolver.acme.storage=acme.json
            - --pilot.token=<YOUR_PILOT_TOKEN>
            - --experimental.plugins.traefik-real-ip.modulename=github.com/soulbalz/traefik-real-ip
            - --experimental.plugins.traefik-real-ip.version=v1.0.3
          volumeMounts:
            - name: tz-config
              mountPath: /usr/share/zoneinfo
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 500Mi

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: 30m
              memory: 30Mi
            limits:
              cpu: 150m
              memory: 150Mi
